# ORSE

./: .directory  .gitignore  CMakeLists.txt  CMakeLists.txt~  ORSE.kdev4  OasisEngine.kdev4  README.md  base.cpp  base.h  base.h~  camera.cpp  camera.cpp~  camera.h  camera.h~  common.h  common.h~  entity.cpp  entity.h  entity.h~  node.cpp~  node.h~  resourcemgr.cpp  resourcemgr.cpp~  resourcemgr.h  resourcemgr.h~  scenemanager.cpp  scenemanager.cpp~  scenemanager.h  scenemanager.h~  uml.xmi  viewport.cpp  viewport.cpp~  viewport.h  viewport.h~  window.h  window.h~
.kdev4/: ORSE.kdev4  OasisEngine.kdev4  _custom.kdev4
cmake/: FindCEGUI.cmake  FindOgg.cmake  FindVorbis.cmake  FindVorbisFile.cmake
cmake/ORSE/: FindOrse.cmake
config/: audio.cpp  audio.cpp~  audio.h  audio.h~  video.cpp~  video.h  video.h~
gui/: хрень.txt
include/: OrseCommon.h  OrseGameObject.h  OrseInputManager.h  OrseNode.h  OrsePhysicsManager.h  OrsePreRequisites.h  OrseResourceMgr.h  OrseRoot.h  OrseStatesManager.h  OrseWorld.h  node.h  resourcemgr.h  root.h
include/config/: video.h
include/network/: auth.h  connection.h
include/physics/: MeshToShapeConverter.h  OrseMotionState.h  OrseOgbt_convert.h  OrseRigidBody.h
include/physics/collisions/: OgreBulletCollisions.h  OgreBulletCollisionsObject.h  OgreBulletCollisionsObjectState.h  OgreBulletCollisionsPreRequisites.h  OgreBulletCollisionsRay.h  OgreBulletCollisionsShape.h  OgreBulletCollisionsWorld.h
include/physics/collisions/Debug/: OgreBulletCollisionsDebugContact.h  OgreBulletCollisionsDebugDrawer.h  OgreBulletCollisionsDebugLines.h  OgreBulletCollisionsDebugShape.h
include/physics/collisions/Shapes/: OgreBulletCollisionsBoxShape.h  OgreBulletCollisionsCapsuleShape.h  OgreBulletCollisionsCompoundShape.h  OgreBulletCollisionsConeShape.h  OgreBulletCollisionsConvexHullShape.h  OgreBulletCollisionsCylinderShape.h  OgreBulletCollisionsGImpactShape.h  OgreBulletCollisionsMinkowskiSumShape.h  OgreBulletCollisionsMultiSphereShape.h  OgreBulletCollisionsSphereShape.h  OgreBulletCollisionsStaticPlaneShape.h  OgreBulletCollisionsTerrainShape.h  OgreBulletCollisionsTriangleShape.h  OgreBulletCollisionsTrimeshShape.h
include/physics/collisions/Utils/: OgreBulletCollisionsMeshToShapeConverter.h  OgreBulletConverter.h
include/physics/dynamics/: OgreBulletDynamics.h  OgreBulletDynamicsConstraint.h  OgreBulletDynamicsObjectState.h  OgreBulletDynamicsPreRequisites.h  OgreBulletDynamicsRigidBody.h  OgreBulletDynamicsWorld.h
include/physics/dynamics/Constraints/: OgreBulletDynamics6DofConstraint.h  OgreBulletDynamics6DofSpringConstraint.h  OgreBulletDynamicsConeTwistConstraint.h  OgreBulletDynamicsHingeConstraint.h  OgreBulletDynamicsPoint2pointConstraint.h  OgreBulletDynamicsRaycastVehicle.h
include/physics/dynamics/Prefab/: OgreBulletDynamicsRagDoll.h
include/sound/: LocklessQueue.h  OgreOggISound.h  OgreOggListener.h  OgreOggSound.h  OgreOggSoundCallback.h  OgreOggSoundFactory.h  OgreOggSoundManager.h  OgreOggSoundPlugin.h  OgreOggSoundPrereqs.h  OgreOggSoundRecord.h  OgreOggStaticSound.h  OgreOggStaticWavSound.h  OgreOggStreamSound.h  OgreOggStreamWavSound.h
network/: auth.h  auth.h~  connection.cpp  connection.h  connection.h~
src/: OrseGameObject.cpp  OrseInputManager.cpp  OrsePhysicsManager.cpp  OrseResourceMgr.cpp  OrseRoot.cpp  OrseStatesManager.cpp  OrseWorld.cpp  node.cpp  resourcemgr.cpp  root.cpp  window.cpp
src/config/: audio.cpp  video.cpp
src/network/: auth.cpp  connection.cpp
src/physics/: MeshToShapeConverter.cpp  OrseOgbt_convert.cpp  OrseRigidBody.cpp
src/physics/collisions/: OgreBulletCollisionsObject.cpp  OgreBulletCollisionsObjectState.cpp  OgreBulletCollisionsPrecompiled.cpp  OgreBulletCollisionsRay.cpp  OgreBulletCollisionsShape.cpp  OgreBulletCollisionsWorld.cpp
src/physics/collisions/Debug/: OgreBulletCollisionsDebugContact.cpp  OgreBulletCollisionsDebugDrawer.cpp  OgreBulletCollisionsDebugLines.cpp  OgreBulletCollisionsDebugShape.cpp
src/physics/collisions/Shapes/: OgreBulletCollisionsBoxShape.cpp  OgreBulletCollisionsCapsuleShape.cpp  OgreBulletCollisionsCompoundShape.cpp  OgreBulletCollisionsConeShape.cpp  OgreBulletCollisionsConvexHullShape.cpp  OgreBulletCollisionsCylinderShape.cpp  OgreBulletCollisionsGImpactShape.cpp  OgreBulletCollisionsMinkowskiSumShape.cpp  OgreBulletCollisionsMultiSphereShape.cpp  OgreBulletCollisionsSphereShape.cpp  OgreBulletCollisionsStaticPlaneShape.cpp  OgreBulletCollisionsTriangleShape.cpp  OgreBulletCollisionsTrimeshShape.cpp
src/physics/collisions/Utils/: OgreBulletCollisionsMeshToShapeConverter.cpp
src/physics/dynamics/: OgreBulletDynamicsConstraint.cpp  OgreBulletDynamicsObjectState.cpp  OgreBulletDynamicsPrecompiled.cpp  OgreBulletDynamicsRigidBody.cpp  OgreBulletDynamicsWorld.cpp
src/physics/dynamics/Constraints/: OgreBulletDynamics6DofConstraint.cpp  OgreBulletDynamics6DofSpringConstraint.cpp  OgreBulletDynamicsConeTwistConstraint.cpp  OgreBulletDynamicsHingeConstraint.cpp  OgreBulletDynamicsPoint2pointConstraint.cpp  OgreBulletDynamicsRaycastVehicle.cpp
src/physics/dynamics/Prefab/: OgreBulletDynamicsRagDoll.cpp
src/sound/: OgreOggISound.cpp  OgreOggListener.cpp  OgreOggSoundFactory.cpp  OgreOggSoundPlugin.cpp  OgreOggSoundPluginDllStart.cpp  OgreOggSoundRecord.cpp  OgreOggStaticSound.cpp  OgreOggStaticWavSound.cpp  OgreOggStreamWavSound.cpp  ogreoggsoundmanager.cpp  ogreoggstreamsound.cpp
uml/: uml.docbook
